--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-headeritem, #2e2f42);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-item:is(:hover, :focus) {
@@ -166,6 +167,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-mail:is(:hover, :focus) {
@@ -213,6 +215,7 @@ body {
   cursor: pointer;
   border-radius: 4px;
   border: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .vision-btn:is(:hover, :focus) {
@@ -329,6 +332,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .team-soc-link:is(:hover, :focus) {
@@ -360,11 +364,16 @@ body {
 .customers-item {
   flex-basis: calc((100% - 120px) / 6);
   height: 88px;
+  
 }
 
-.customers-icon-link:hover {
-  border-color: #404bbf;
+.customs-icon {
+  fill: currentColor;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.customers-item:hover .customs-icon {
+  fill: #404bbf;}
 
 .customers-icon-link {
   width: 100%;
@@ -375,15 +384,14 @@ body {
   border: 1px solid #8e8f99;
   border-radius: 4px;
   color: var(--customers-color-icon, #8e8f99);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customs-icon {
-  fill: currentColor;
+.customers-icon-link:is( :hover,:focus) {
+  border-color: #404bbf;
 }
 
-.customers-item:hover .customs-icon {
-  fill: #404bbf;
-}
+
 
 /**-----------Footer--------------*/
 .footer {
@@ -455,6 +463,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-link:is(:hover, :focus) {
@@ -491,6 +500,7 @@ body {
   border: 1px solid var(--color-card-border, #e7e9fc);
   border-radius: 4px;
   padding: 12px 24px;
+  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1),background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:is(:hover, :focus) {
@@ -514,8 +524,9 @@ body {
   flex-basis: calc((100% - 48px) / 3);
 }
 
-.category-item-photo {
+.category-item-photo {  
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .category-item-photo:is(:hover, :focus) {
@@ -538,6 +549,30 @@ body {
   margin: auto;
   margin-top: 8px;
   text-align: left;
+}
+
+.overlay-category{
+  position: relative;
+}
+  
+
+.overlay-category-text{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px 164px 32px ;
+  overflow-y: scroll;
+  transform: translate(0, 100%);
+  transition: transform 500ms linear;
+
+  font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;  
+    color:#F4F4FD;
+    background-color:#4D5AE5;
 }
 
 .portfolio-titl-img {
