--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@
   --bg-color-social-icons-hover: #404bbf;
   --bg-footer-social-icons-hover: #31d0aa;
   --customers-color-icon: #8e8f99;
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p,
@@ -154,7 +155,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-headeritem, #2e2f42);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition);
 }
 
 .header-item:is(:hover, :focus) {
@@ -167,7 +168,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition);
 }
 
 .header-mail:is(:hover, :focus) {
@@ -215,7 +216,7 @@ body {
   cursor: pointer;
   border-radius: 4px;
   border: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition);
 }
 
 .vision-btn:is(:hover, :focus) {
@@ -332,7 +333,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: background-color var(--transition);
 }
 
 .team-soc-link:is(:hover, :focus) {
@@ -364,16 +365,16 @@ body {
 .customers-item {
   flex-basis: calc((100% - 120px) / 6);
   height: 88px;
-  
 }
 
 .customs-icon {
   fill: currentColor;
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--transition);
 }
 
 .customers-item:hover .customs-icon {
-  fill: #404bbf;}
+  fill: #404bbf;
+}
 
 .customers-icon-link {
   width: 100%;
@@ -384,14 +385,12 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid #8e8f99;
   border-radius: 4px;
   color: var(--customers-color-icon, #8e8f99);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color var(--transition);
 }
 
-.customers-icon-link:is( :hover,:focus) {
+.customers-icon-link:is(:hover, :focus) {
   border-color: #404bbf;
 }
-
-
 
 /**-----------Footer--------------*/
 .footer {
@@ -463,7 +462,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition);
 }
 
 .footer-soc-link:is(:hover, :focus) {
@@ -500,7 +499,8 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid var(--color-card-border, #e7e9fc);
   border-radius: 4px;
   padding: 12px 24px;
-  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1),background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition), background-color var(--transition),
+    border-color var(--transition), box-shadow var(--transition);
 }
 
 .filter-btn:is(:hover, :focus) {
@@ -524,9 +524,9 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   flex-basis: calc((100% - 48px) / 3);
 }
 
-.category-item-photo {  
+.category-item-photo {
   display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--transition);
 }
 
 .category-item-photo:is(:hover, :focus) {
@@ -551,28 +551,32 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: left;
 }
 
-.overlay-category{
+.overlay-category {
   position: relative;
+  overflow: hidden;
 }
-  
 
-.overlay-category-text{
+.overlay-category-text {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  padding: 40px 32px 164px 32px ;
-  overflow-y: scroll;
+  padding: 40px 32px 164px 32px;
+  overflow: auto;
   transform: translate(0, 100%);
-  transition: transform 500ms linear;
+  transition: transform var(--transition);
 
   font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;  
-    color:#F4F4FD;
-    background-color:#4D5AE5;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+}
+
+.category-item-photo:is(:hover, :focus) .overlay-category-text {
+  transform: translate(0, 0);
 }
 
 .portfolio-titl-img {
@@ -581,4 +585,56 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-bottom: 32px;
   border: 1px solid var(--color-card-border, #e7e9fc);
   border-top: none;
+}
+
+/**-------------Modal Window--------------*/
+
+.modal-box {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background: rgba(46, 47, 66, 0.4);
+  transition: opacity var(--transition), visibility var(--transition) ;
+}
+
+.modal-box.is-hidden{
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal-window {
+  position: absolute;
+     top: 50%;
+    left: 50%;
+    transform: translate(-50% ,-50%);
+
+  width: 408px;
+  height: 576px;
+  
+  
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-dutton {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  background: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
 }
